--- a/index.html
+++ b/index.html
@@ -1,18 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Spotify Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <div id="menu">
+    <img src="images/spotify-logo.png" alt="logo spotify" id="logoSpotify">
+    <div id="navbar">
+      <ul>
+        <li><a href="#"><button type="button">Premium</button></a></li>
+        <li><a href="#"><button type="button">Discover</button></a></li>
+        <li><a href="#"><button type="button">Help</button></a></li>
+        <li><a href="#"><button type="button">Download</button></a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div id="description">
+    <h1>Music is for everyone.</h1>
+    <p>Spotify is now free on mobile, tablet and computer.</p>
+    <p>Listen to the right music, wherever you are.</p>
+  </div>
+
+  <div id="question">
+    <h2>What's on Spotify?</h2>
+  </div>
+  
+
+  <article>
+      <div class="what">
+        <img src="images/music-icon.png" alt="music icon">
+        <h3>Millions Of Songs</h3>
+        <span>There are millions of songs on Spotify</span>
+      </div>
+      <div class="what">
+        <img src="images/high-quality-icon.png" alt="high quality icon">
+        <h3>HD Music</h3>
+        <span>Listen to music as if you were listening live</span>
+      </div>
+      <div class="what">
+        <img src="images/devices-icon.png" alt="devices icons">
+        <h3>Stream Everywhere</h3>
+        <span>Stream music on your smartphone, tablet or computer</span>
+    </div>
+  </article>
+
+  <footer>
+    <div id="footerDescription">
+      <h4>It's as yeezy as Kanye West.</h4>
+      <h5>Search</h5>
+      <p>Know what you want to listen to ? <br>Just search and hit play.</p>
+
+      <h5>Browse</h5>
+      <p>Check out the latest charts, brand new releases and great playlists for right now.</p>
+
+      <h5>Discover</h5>
+      <p>Enjoy new music every Monday with your own personal playlist. <br>Or sit and enjoy Radio.</p>
+    </div>
+    <img id="spotifyIcon" src="images/spotify-icon-white.png" alt="spotify icon white">
+    <img id="kanye" src="images/spotify-app.jpg" alt="spotify app img">
+  </footer>
+
+</body>
+
 </html>
