petites retouches pas sûr à propos des boutons pour le menu

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <img src="images/spotify-logo.png" alt="logo spotify" id="logoSpotify">
     <div id="navbar">
       <ul>
-        <li><a href="#"><button type="button">Premium</button></a></li>
-        <li><a href="#"><button type="button">Discover</button></a></li>
-        <li><a href="#"><button type="button">Help</button></a></li>
-        <li><a href="#"><button type="button">Download</button></a></li>
+        <li><button type="button">Premium</button></li>
+        <li><button type="button">Discover</button></li>
+        <li><button type="button">Help</button></li>
+        <li><button type="button">Download</button></li>
       </ul>
     </div>
   </div>
